--- a/docs/extra.css
+++ b/docs/extra.css
@@ -7,6 +7,7 @@
     --md-primary-bg-color--light:   #eceff1; /* search panel */
     --md-primary-bg-color:          #e3f2fd; /* header bg */
     --md-primary-fg-color:          #1976d2; /* header */
+    --md-admonition-icon--slack: url('data:image/svg+xml;charset=utf-8,<svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Slack</title><path d="M5.042 15.165a2.528 2.528 0 0 1-2.52 2.523A2.528 2.528 0 0 1 0 15.165a2.527 2.527 0 0 1 2.522-2.52h2.52v2.52zM6.313 15.165a2.527 2.527 0 0 1 2.521-2.52 2.527 2.527 0 0 1 2.521 2.52v6.313A2.528 2.528 0 0 1 8.834 24a2.528 2.528 0 0 1-2.521-2.522v-6.313zM8.834 5.042a2.528 2.528 0 0 1-2.521-2.52A2.528 2.528 0 0 1 8.834 0a2.528 2.528 0 0 1 2.521 2.522v2.52H8.834zM8.834 6.313a2.528 2.528 0 0 1 2.521 2.521 2.528 2.528 0 0 1-2.521 2.521H2.522A2.528 2.528 0 0 1 0 8.834a2.528 2.528 0 0 1 2.522-2.521h6.312zM18.956 8.834a2.528 2.528 0 0 1 2.522-2.521A2.528 2.528 0 0 1 24 8.834a2.528 2.528 0 0 1-2.522 2.521h-2.522V8.834zM17.688 8.834a2.528 2.528 0 0 1-2.523 2.521 2.527 2.527 0 0 1-2.52-2.521V2.522A2.527 2.527 0 0 1 15.165 0a2.528 2.528 0 0 1 2.523 2.522v6.312zM15.165 18.956a2.528 2.528 0 0 1 2.523 2.522A2.528 2.528 0 0 1 15.165 24a2.527 2.527 0 0 1-2.52-2.522v-2.522h2.52zM15.165 17.688a2.527 2.527 0 0 1-2.52-2.523 2.526 2.526 0 0 1 2.52-2.52h6.313A2.527 2.527 0 0 1 24 15.165a2.528 2.528 0 0 1-2.522 2.523h-6.313z"/></svg>')
 }
 
 .mdx-container {
@@ -83,3 +84,19 @@
 .md-nav__link[for] {
     color: var(--md-default-fg-color) !important
 }
+
+.md-typeset .admonition.slack,
+.md-typeset details.slack {
+  border-color: rgb(74, 21, 75);
+}
+.md-typeset .slack > .admonition-title,
+.md-typeset .slack > summary {
+  background-color: rgba(74, 21, 75, 0.1);
+}
+.md-typeset .slack > .admonition-title::before,
+.md-typeset .slack > summary::before {
+  background-color: rgb(74, 21, 75);
+  -webkit-mask-image: var(--md-admonition-icon--slack);
+          mask-image: var(--md-admonition-icon--slack);
+}
+  
